bundled_metadata/force-app/main/default/objects/AFH_Buttons_Configuration__mdt/AFH_Buttons_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>AFH Buttons Configuration</label>
    <pluralLabel>AFH Buttons Configurations</pluralLabel>
</CustomObject>