bundled_metadata/force-app/main/default/objects/AFH_Buttons_Configuration__mdt/fields/AFH_Button_Link__c.field-meta.xml
<CustomField>
    <fullName>AFH_Button_Link__c</fullName>
    <label>Button Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>