bundled_metadata/force-app/main/default/objects/AFH_Buttons_Configuration__mdt/fields/AFH_Button_Type__c.field-meta.xml
<CustomField>
    <fullName>AFH_Button_Type__c</fullName>
    <label>Button Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blue Box1</fullName>
                <default>true</default>
                <label>Blue Box1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>