bundled_metadata/force-app/main/default/objects/AFH_Buttons_Configuration__mdt/fields/AFH_Custom_Link__c.field-meta.xml
<CustomField>
    <fullName>AFH_Custom_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Link</label>
    <type>Checkbox</type>
</CustomField>