bundled_metadata/force-app/main/default/objects/AFH_Buttons_Configuration__mdt/fields/AFH_User_Type__c.field-meta.xml
<CustomField>
    <fullName>AFH_User_Type__c</fullName>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Member</fullName>
                <default>true</default>
                <label>Member</label>
            </value>
            <value>
                <fullName>Non Member</fullName>
            </value>
            <value>
                <fullName>DL Approved</fullName>
            </value>
            <value>
                <fullName>DL Pending</fullName>
            </value>
            <value>
                <fullName>DL Logout</fullName>
            </value>
            
        </valueSetDefinition>
    </valueSet>
</CustomField>